# lanczos3

./: CMakeLists.txt  README.md  cpu.c  cpu.h  gpu.c  gpu.h  kernel.c  kernel.h  main.cpp  opencl.c  opencl.h  timer.c  timer.h
